--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=7777
+
+spring.scan.packages=xyz.fz.vertx
+
+vertx.cluster.host=127.0.0.1
+vertx.group.name=vertxGroup
+vertx.group.password=vertxGroupPassword
