1.mongodb 2.rx socketJs 3.upgrade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=7777
+socket.js.port=3333
 
 spring.scan.packages=xyz.fz.vertx
 
 vertx.cluster.host=127.0.0.1
 vertx.group.name=vertxGroup
 vertx.group.password=vertxGroupPassword
+
+mongodb.uri=mongodb://myVertx:xyz123@localhost/vertx
+mongodb.name=vertx
